Fix up spacing between register and sign-in buttons

--- a/static/style.css
+++ b/static/style.css
@@ -98,3 +98,9 @@ input#new_version {
 /* Sortable tables */
 th.headerSortUp::after { content: " ▲"; }
 th.headerSortDown::after { content: " ▼"; }
+
+#register-button,
+#sign-in-button {
+    margin-left: 8px;
+    margin-right: 0px;
+}
